syntax = "proto3";
package flipcash.activity.v1;
option go_package = "github.com/code-payments/flipcash-protobuf-api/generated/go/activity/v1;activitypb";
option java_package = "com.codeinc.flipcash.gen.activity.v1";
option objc_class_prefix = "FCPBActivityV1";
import "common/v1/common.proto";
import "google/protobuf/timestamp.proto";

// The ID of the notification
message NotificationId {
    bytes value = 1 ;
}
// Notification is a message that is displayed in an activity feed
message Notification {
    // The ID of this notification
    NotificationId id = 1;
    // The localized title text for the notification
    string localized_text = 2 ;
    // If a payment applies, the amount that was paid
    common.v1.PaymentAmount payment_amount = 3;
    // The timestamp of this notification
    google.protobuf.Timestamp ts = 4;
    // Additional metadata for this notification specific to the notification
    oneof additional_metadata {
        WelcomeBonusNotificationMetadata welcome_bonus = 5;
        GaveUsdcNotificationMetadata     gave_usdc     = 6;
        ReceivedUsdcNotificationMetadata received_usdc = 7;
        WithdrewUsdcNotificationMetadata withdrew_usdc = 8;
        SentUsdcNotificationMetadata     sent_usdc     = 9;
    }
}
message WelcomeBonusNotificationMetadata {
}
message GaveUsdcNotificationMetadata {
}
message ReceivedUsdcNotificationMetadata {
}
message WithdrewUsdcNotificationMetadata {
}
message SentUsdcNotificationMetadata {
    // The vault of the gift card account that was created for the cash link
    common.v1.PublicKey vault = 1;
    // Whether the cancel action can be initiated by the user
    bool can_initiate_cancel_action = 2;
}
// ActivityFeedType enables multiple activity feeds, where notifications may be
// split across different parts of the app
enum ActivityFeedType {
    UNKNOWN             = 0;
    TRANSACTION_HISTORY = 1; // Activity feed displayed under the Balance tab
}
